# JamJar

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  main.yml
docs/: index.md  requirements.txt
docs/Architecture/: game_loop.md  render_pipeline.md  structure.md
docs/Architecture/ECS/: components.md  index.md  stateful_systems.md  systems.md
docs/Architecture/ECS/internals/: component_manager.md  entity_manager.md
docs/Architecture/Messages/: index.md  listeners.md  message_bus.md
docs/Documentation/: draw_modes.md  image_loading.md  primitives.md  sprites.md  window_initialization.md  window_management_and_fullscreen.md
docs/Documentation/Box2D/: bodies.md  collisions.md  index.md
docs/Documentation/Core/: components.md
docs/Documentation/SDL2/: index.md  keyboard_input.md  mouse_input.md
docs/architecture/: game_loop.md  structure.md
docs/architecture/ECS/: components.md  entities.md  index.md  stateful_systems.md  systems.md
docs/architecture/ECS/internals/: entity_manager.md
docs/architecture/messages/: index.md  message_bus.md  subscribers.md
docs/documentation/: box2d_physics.md  draw_modes.md  image_loading.md  primitives.md
examples/Collision/: CMakeLists.txt  README.md  index.html
examples/Collision/src/: box.cpp  box.hpp  collision.cpp  collision.hpp  destroy_system.cpp  destroy_system.hpp  destructor.cpp  destructor.hpp  main.cpp
examples/Cursor/: CMakeLists.txt  README.md  index.html
examples/Cursor/src/: cursor.cpp  cursor.hpp  main.cpp  pointer_controller.cpp  pointer_controller.hpp
examples/Fullscreen/: CMakeLists.txt  README.md  index.html
examples/Fullscreen/src/: fullscreen.cpp  fullscreen.hpp  input_listener.cpp  main.cpp
examples/MouseInput/: CMakeLists.txt  README.md  index.html
examples/MouseInput/src/: input_controller.cpp  input_controller.hpp  main.cpp  mouse_input.cpp  mouse_input.hpp
examples/Physics/: CMakeLists.txt  README.md  index.html
examples/Physics/src/: input_listener.cpp  input_listener.hpp  main.cpp  physics.cpp  physics.hpp
examples/PhysicsResizing/: CMakeLists.txt  README.md  index.html
examples/PhysicsResizing/src/: main.cpp  physics_resizing.cpp  physics_resizing.hpp  resizable.cpp  resizable.hpp  resizing_system.cpp  resizing_system.hpp
examples/Primitives/: CMakeLists.txt  README.md  index.html
examples/Primitives/src/: main.cpp  primitives.cpp  primitives.hpp
examples/Rotator/: CMakeLists.txt  index.html
examples/Rotator/src/: input_controller.cpp  input_controller.hpp  main.cpp  player.cpp  player.hpp  rotator.cpp  rotator.hpp
examples/SimpleGame/: CMakeLists.txt  README.md  index.html
examples/SimpleGame/src/: input_listener.cpp  main.cpp  simple_game.cpp
examples/Sprites/: CMakeLists.txt  README.md  index.html
examples/Sprites/src/: input_listener.cpp  input_listener.hpp  main.cpp  simple_game.cpp  simple_game.hpp  sprites.cpp  sprites.hpp
include/: game.hpp  hash.hpp  numbers.hpp  window.hpp
include/component/: component.hpp  component_manager.hpp
include/entity/: entity.hpp  entity_manager.hpp
include/geometry/: aabb.hpp  matrix_4d.hpp  polygon.hpp  shape_2d.hpp  vector_2d.hpp
include/message/: listener.hpp  message.hpp  message_bus.hpp  message_payload.hpp  subscriber.hpp
include/render/: color.hpp  material.hpp  texture.hpp
include/standard/2d/box2d/: box2d_body.hpp  box2d_physics_system.hpp
include/standard/2d/camera/: camera.hpp
include/standard/2d/interpolation/: interpolation_system.hpp
include/standard/2d/motion/: motion.hpp  motion_system.hpp
include/standard/2d/primitive/: primitive.hpp  primitive_system.hpp  webgl2_default_primitive_shaders.hpp
include/standard/2d/render/: render_system.hpp  renderable.hpp
include/standard/2d/sprite/: sprite.hpp  sprite_system.hpp  webgl2_default_sprite_shaders.hpp
include/standard/2d/transform/: transform.hpp
include/standard/2d/webgl2/: webgl2_shader.hpp  webgl2_system.hpp
include/standard/camera/: camera.hpp
include/standard/file_texture/: file_texture_request.hpp  file_texture_response.hpp  file_texture_system.hpp
include/standard/interpolation/: interpolation_system.hpp
include/standard/motion/: motion.hpp  motion_system.hpp
include/standard/primitive/: primitive.hpp  primitive_system.hpp
include/standard/render/: render_system.hpp  renderable.hpp
include/standard/sdl2_input/: sdl2_input_system.hpp
include/standard/transform/: transform.hpp
include/standard/webgl2/: webgl2_system.hpp
include/standard/window/: window_system.hpp
include/system/: bucket_map_system.hpp  bucket_system.hpp  evaluator.hpp  map_system.hpp  single_entity_system.hpp  stateful_system.hpp  system.hpp  system_entity.hpp  vector_system.hpp
src/: game.cpp  window.cpp
src/component/: component.cpp  component_manager.cpp
src/entity/: entity.cpp  entity_manager.cpp
src/geometry/: aabb.cpp  matrix_4d.cpp  polygon.cpp  shape_2d.cpp  vector_2d.cpp  vector_2d.test.cpp
src/message/: listener.cpp  message_bus.cpp  subscriber.cpp
src/render/: color.cpp  material.cpp  texture.cpp
src/standard/2d/box2d/: box2d_body.cpp  box2d_physics_system.cpp
src/standard/2d/camera/: camera.cpp
src/standard/2d/interpolation/: interpolation_system.cpp
src/standard/2d/motion/: motion.cpp  motion_system.cpp
src/standard/camera/: camera.cpp
src/standard/file_texture/: file_texture_system.cpp
src/standard/interpolation/: interpolation_system.cpp
src/standard/motion/: motion.cpp  motion_system.cpp
src/standard/primitive/: primitive.cpp  primitive_system.cpp
src/standard/render/: render_system.cpp
src/standard/sdl2_input/: sdl2_input_system.cpp
src/standard/transform/: transform.cpp
src/standard/webgl2/: webgl2_system.cpp
src/standard/window/: window_system.cpp
src/system/: bucket_map_system.cpp  bucket_system.cpp  map_system.cpp  single_entity_system.cpp  stateful_system.cpp  system.cpp  system_entity.cpp  vector_system.cpp
(+10 files in other folders)
